--- a/src/Integrador1/Integrador.csproj
+++ b/src/Integrador1/Integrador.csproj
@@ -11,10 +11,10 @@
 	
 	<ItemGroup>
 		<None Update="Infrastructure\Data\Auto.xml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Infrastructure\Data\Persona.xml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
 	
