--- a/src/Mono/Integrador.csproj
+++ b/src/Mono/Integrador.csproj
@@ -7,6 +7,10 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+	</ItemGroup>
 	
 	<ItemGroup>
 		<None Update="LocalData\Car.xml">
@@ -15,10 +19,6 @@
 		<None Update="LocalData\Person.xml">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
 	</ItemGroup>
 	
 </Project>
