--- a/src/Mono/Integrador.csproj
+++ b/src/Mono/Integrador.csproj
@@ -12,10 +12,6 @@
 	<ItemGroup>
 	  <Content Include="gt.ico" />
 	</ItemGroup>
-
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
-	</ItemGroup>
 	
 	<ItemGroup>
 		<None Update="LocalData\Car.xml">
@@ -24,6 +20,26 @@
 		<None Update="LocalData\Person.xml">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Properties\Settings.settings">
+		  <Generator>SettingsSingleFileGenerator</Generator>
+		  <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Infrastructure\Persistence\LiteDB\" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Compile Update="Properties\Settings.Designer.cs">
+	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Settings.settings</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 	
 </Project>
