--- a/src/Mono/Integrador.csproj
+++ b/src/Mono/Integrador.csproj
@@ -32,6 +32,7 @@
 	
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
+	  <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
 	</ItemGroup>
 	
 	<ItemGroup>
