71 (el chiste del abuelo)

--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <configuration>
-	<connectionStrings>
-		<add
-		  name="SQLiteConnection"
-		  connectionString="Data Source=LocalData/SQLite.db"
-		  providerName="System.Data.SQLite" />
-	</connectionStrings>
+	<appSettings>
+		<add key="PersistenceTechnology" value="SQLite"/>
+	</appSettings>
+    <connectionStrings>
+        <add name="SQLiteConnection"
+             connectionString="Data Source=LocalData/SQLite.db"
+             providerName="System.Data.SQLite" />
+        <add name="LiteDbConnection"
+             connectionString="LocalData/LiteDB.db"
+             providerName="LiteDB" />
+    </connectionStrings>
 </configuration>
