--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -2,7 +2,7 @@
 
 <configuration>
 	<appSettings>
-		<add key="PersistenceTechnology" value="SQLite"/>
+		<add key="PersistenceTechnology" value="LiteDB"/>
 	</appSettings>
     <connectionStrings>
         <add name="SQLiteConnection"
