--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -4,7 +4,7 @@
 	<configSections>
  </configSections>
  <appSettings>
-		<add key="PersistenceTechnology" value="LiteDB"/>
+		<add key="PersistenceTechnology" value="SQLite"/>
 	</appSettings>
     <connectionStrings>
         <add name="SQLiteConnection"
