--- a/src/Mono/Integrador.csproj
+++ b/src/Mono/Integrador.csproj
@@ -35,17 +35,17 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <Compile Update="Properties\Resources.Designer.cs">
-	    <DependentUpon>Resources.resx</DependentUpon>
+	  <Compile Update="Presentation\Localization\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <EmbeddedResource Update="Properties\Resources.resx">
-	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  <EmbeddedResource Update="Presentation\Localization\Resources.resx">
 	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
 	</ItemGroup>
 	
