--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -2,16 +2,17 @@
 
 <configuration>
 	<configSections>
- </configSections>
- <appSettings>
+	</configSections>
+	<appSettings>
 		<add key="PersistenceTechnology" value="SQLite"/>
+		<add key="DefaultCulture" value="es" />
 	</appSettings>
-    <connectionStrings>
-        <add name="SQLiteConnection"
+	<connectionStrings>
+		<add name="SQLiteConnection"
              connectionString="Data Source=LocalData/SQLite.db"
              providerName="System.Data.SQLite" />
-        <add name="LiteDbConnection"
+		<add name="LiteDbConnection"
              connectionString="LocalData/LiteDB.db"
              providerName="LiteDB" />
-    </connectionStrings>
+	</connectionStrings>
 </configuration>
