--- a/src/Mono/Integrador.csproj
+++ b/src/Mono/Integrador.csproj
@@ -30,7 +30,8 @@
 	
 	<ItemGroup>
 	  <PackageReference Include="LiteDB" Version="5.0.21" />
-	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
+	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
 	  <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
 	</ItemGroup>
 	
