--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -1,18 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <configuration>
-	<configSections>
-	</configSections>
+
 	<appSettings>
 		<add key="PersistenceTechnology" value="SQLite"/>
 		<add key="DefaultCulture" value="es" />
 	</appSettings>
+
 	<connectionStrings>
 		<add name="SQLiteConnection"
-             connectionString="Data Source=LocalData/SQLite.db"
-             providerName="System.Data.SQLite" />
-		<add name="LiteDbConnection"
-             connectionString="LocalData/LiteDB.db"
-             providerName="LiteDB" />
+			 connectionString="Data Source=LocalData/SQLite.db"
+			 providerName="System.Data.SQLite" />
+
+		<add name="LiteDbBusinessConnection"
+			 connectionString="LocalData/LiteDB.db"
+			 providerName="LiteDB" />
+
+		<add name="LiteDbLogConnection"
+			 connectionString="LocalData/LogDB.db"
+			 providerName="LiteDB" />
 	</connectionStrings>
+
 </configuration>
