--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -3,12 +3,12 @@
 <configuration>
 
 	<appSettings>
-		<add key="PersistenceTechnology" value="SQLite"/>
+		<add key="PersistenceTechnology" value="LiteDB"/>
 		<add key="DefaultCulture" value="es" />
 	</appSettings>
 
 	<connectionStrings>
-		<add name="SQLiteConnection"
+		<add name="SQLiteBusinessConnection"
 			 connectionString="Data Source=LocalData/SQLite.db"
 			 providerName="System.Data.SQLite" />
 
@@ -17,7 +17,7 @@
 			 providerName="LiteDB" />
 
 		<add name="LiteDbLogConnection"
-			 connectionString="LocalData/LogDB.db"
+			 connectionString="LocalData/LogEntry.db"
 			 providerName="LiteDB" />
 	</connectionStrings>
 
