--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -3,7 +3,7 @@
 <configuration>
 
 	<appSettings>
-		<add key="PersistenceTechnology" value="LiteDB"/>
+		<add key="PersistenceTechnology" value="SQLite"/>
 		<add key="DefaultCulture" value="es" />
 	</appSettings>
 
