--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -3,8 +3,8 @@
 <configuration>
 
 	<appSettings>
-		<add key="PersistenceTechnology" value="SQLite"/>
-		<add key="DefaultCulture" value="es" />
+		<add key="PersistenceTechnology" value="XML"/>
+		<add key="DefaultCulture" value="en" />
 	</appSettings>
 
 	<connectionStrings>
