--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -5,6 +5,8 @@
 	<appSettings>
 		<add key="PersistenceTechnology" value="XML"/>
 		<add key="DefaultCulture" value="en" />
+		<add key="JsonLogPath" value="LocalData/LogEntry.json" />
+		<add key="JsonUserPath" value="LocalData/User.json" />
 	</appSettings>
 
 	<connectionStrings>
