--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -4,7 +4,7 @@
 
 	<appSettings>
 		<add key="PersistenceTechnology" value="XML"/>
-		<add key="DefaultCulture" value="en" />
+		<add key="DefaultCulture" value="es" />
 		<add key="JsonLogPath" value="LocalData/LogEntry.json" />
 		<add key="JsonUserPath" value="LocalData/User.json" />
 	</appSettings>
