--- a/src/Mono/App.config
+++ b/src/Mono/App.config
@@ -7,7 +7,7 @@
 		<add key="DefaultCulture" value="es" />
 		<add key="JsonLogPath" value="Log\LogEntry.json" />
 		<add key="JsonUserPath" value="Auth\User.json" />
-		<add key="JsonUserPath" value="Auth\Role.json" />
+		<add key="JsonRolePath" value="Auth\Role.json" />
 	</appSettings>
 
 	<connectionStrings>
